src/test/deca/syntax/valid/created/voidElmt/param.deca
// Description:
//      Utilisation d'un parametre de methode void
// Resultat:
//      OK

class A {
    int g(void a){}
}