src/test/deca/syntax/invalid/created/class_without/method_noIdentifier.deca
// Description:
//      Utilisation d'une classe sans identifier
// Resultats:
//      Error syntax Ligne 7 : no viable alternative at input 'int('

class A {
    int (){}
}